checkpoint docs
